--- a/style.css
+++ b/style.css
@@ -1,16 +1,76 @@
 .tumbler__side {
-  width: 73px;
+  width: 60px;
   height: 30px;
-  background-color: rgb(244, 244, 244);
   border-radius: 10px;
-}
-
-.tumbler__side:first-of-type {
-  background-color: rgb(51, 121, 217);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .tumbler {
   display: flex;
+  justify-content: space-between;
+  height: 30px;
+  width: 130px;
+  background-color: rgb(244, 244, 244);
+  border-radius: 10px;
+  position: relative;
+}
+
+.tumbler__anim {
+  width: 60%;
+  height: 30px;
+  background-color: rgb(51, 121, 217);
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.tumbler__checkbox {
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  position: absolute;
+  width: 130px;
+  height: 30px;
+  animation: 5s 1 alternate r;
+  animation-fill-mode: both;
+}
+
+@keyframes r {
+  50% {
+    border-radius: 100% 40% 40% 100%;
+  }
+  100% {
+    border-radius: 10px;
+    left: 0;
+    width: 40%;
+    --checked: 0;
+  }
+}
+.tumbler__checkbox:checked ~ .tumbler__anim {
+  animation: 1s 1 alternate resize;
+  animation-fill-mode: both;
+  --checked: 1;
+}
+
+@keyframes resize {
+  0% {
+    box-shadow: -7px 0 5px rgb(51, 121, 217), -21px 0 5px rgba(51, 121, 217, 0.5), -30px 0 5px rgba(51, 121, 217, 0.2);
+    width: 20%;
+  }
+  100% {
+    width: 60%;
+    left: calc(130px - 60%);
+  }
+}
+.tumbpler__paragraph {
+  font-weight: 200;
+  font-size: 15px;
+  z-index: 2;
+  position: relative;
 }
 
 /*# sourceMappingURL=style.css.map */
