--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-.tumbler__side {
-  width: 60px;
-  height: 30px;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
 .tumbler {
   display: flex;
   justify-content: space-between;
@@ -16,61 +6,49 @@
   background-color: rgb(244, 244, 244);
   border-radius: 10px;
   position: relative;
+  overflow: hidden;
+}
+
+.tumbpler__paragraph {
+  font-weight: 200;
+  font-size: 15px;
+  z-index: 2;
+  position: relative;
+  margin: 0;
+}
+
+.tumbler__side {
+  width: 65px;
+  height: 30px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .tumbler__anim {
-  width: 60%;
+  width: 50%;
   height: 30px;
   background-color: rgb(51, 121, 217);
   border-radius: 10px;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 1;
 }
 
-.tumbler__checkbox {
-  overflow: hidden;
+.tumbler__input {
+  margin: 0;
+  padding: 0;
+  width: 65px;
   clip: rect(0 0 0 0);
-  position: absolute;
-  width: 130px;
-  height: 30px;
-  animation: 5s 1 alternate r;
-  animation-fill-mode: both;
+  opacity: 0;
+  border-radius: 10px;
 }
 
-@keyframes r {
-  50% {
-    border-radius: 100% 40% 40% 100%;
-  }
-  100% {
-    border-radius: 10px;
-    left: 0;
-    width: 40%;
-    --checked: 0;
-  }
-}
-.tumbler__checkbox:checked ~ .tumbler__anim {
-  animation: 1s 1 alternate resize;
-  animation-fill-mode: both;
-  --checked: 1;
-}
-
-@keyframes resize {
-  0% {
-    box-shadow: -7px 0 5px rgb(51, 121, 217), -21px 0 5px rgba(51, 121, 217, 0.5), -30px 0 5px rgba(51, 121, 217, 0.2);
-    width: 20%;
-  }
-  100% {
-    width: 60%;
-    left: calc(130px - 60%);
-  }
-}
-.tumbpler__paragraph {
-  font-weight: 200;
-  font-size: 15px;
-  z-index: 2;
-  position: relative;
+.tumbler__input:focus ~ .tumbler__anim {
+  background-color: aqua;
 }
 
 /*# sourceMappingURL=style.css.map */
