--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,31 @@
 $color_off: rgba(244, 244, 244, 1);
 $color_on: rgba(51, 121, 217, 1);
+$width: 130px;
+$height: 30px;
+
+
+.tumbler {
+    display: flex;
+    justify-content: space-between;
+    height: $height;
+    width: $width;
+    background-color: $color_off;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.tumbpler__paragraph {
+    font-weight: 200;
+    font-size: 15px;
+    z-index: 2;
+    position: relative;
+    margin: 0;
+}
 
 .tumbler__side {
-    width: 60px;
-    height: 30px;
+    width: calc($width/2);
+    height: $height;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -11,100 +33,28 @@ $color_on: rgba(51, 121, 217, 1);
     overflow: hidden;
 }
 
-.tumbler {
-    display: flex;
-    justify-content: space-between;
-    height: 30px;
-    width: 130px;
-    background-color: $color_off;
-    border-radius: 10px;
-    position: relative;
-}
-
-
 .tumbler__anim {
-    width: 60%;
+    width: 50%;
     height: 30px;
     background-color: $color_on;
     border-radius: 10px;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
-    // transition: all 1s;
+    z-index: 1;
 }
 
-.tumbler__checkbox {
 
-    overflow: hidden;
+.tumbler__input {
+    margin: 0;
+    padding: 0;
+    width: calc($width/2);
     clip: rect(0 0 0 0);
-    position: absolute;
-    width: 130px;
-    height: 30px;
-    animation: 5s 1 alternate r;
-    animation-fill-mode: both;
-    
+    opacity: 0;
+    border-radius: 10px;
 }
 
-@keyframes r {
-    50% {
-        border-radius: 100% 40% 40% 100%; 
-    }
-
-    100% {
-        border-radius: 10px;
-        left: 0;
-        width: 40%;
-        --checked: 0;
-    }
+.tumbler__input:focus~.tumbler__anim {
+    background-color: aqua;
 }
 
-.tumbler__checkbox:checked~.tumbler__anim {
-    // right: 0;
-    // left: auto;
-    
-    // transform: matrix(1, 0, 0, 1, 80, 0);
-    animation: 1s 1 alternate resize;
-    animation-fill-mode: both;
-    --checked: 1;
-}
-
-@keyframes resize {
-
-    0% {
-        box-shadow: -7px 0 5px rgba(51, 121, 217, 1), -21px 0 5px rgba(51, 121, 217, 0.5), -30px 0 5px rgba(51, 121, 217, 0.2);
-        width: 20%;
-    }
-
-    100% {
-        width: 60%;
-        left: calc(130px - 60%);
-    }
-}
-
-
-// @keyframes resize {
-
-//     0% {
-//         border-radius: 100% 80% 80% 100%;
-//         width: 80%;
-        
-//     }
-
-//     100% {
-//         width: 60%;
-//         border-radius: 10px;
-//         left: calc(130px - 60%);
-//     }
-// }
-
-
-
-
-
-.tumbpler__paragraph {
-    font-weight: 200;
-    font-size: 15px;
-    z-index: 2;
-    position: relative;
-}
