--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $color_off: rgba(244, 244, 244, 1);
 $color_on: rgba(51, 121, 217, 1);
 $width: 130px;
 $height: 30px;
+$position: 0;
 
 
 .tumbler {
@@ -18,13 +19,14 @@ $height: 30px;
 .tumbpler__paragraph {
     font-weight: 200;
     font-size: 15px;
-    z-index: 2;
+    z-index: 3;
     position: relative;
     margin: 0;
 }
 
 .tumbler__side {
-    width: calc($width/2);
+    position: relative;
+    width: 65px;
     height: $height;
     border-radius: 10px;
     display: flex;
@@ -40,21 +42,75 @@ $height: 30px;
     border-radius: 10px;
     position: absolute;
     top: 0;
-    left: 0;
+    left: $position;
     z-index: 1;
 }
 
 
 .tumbler__input {
+    position: absolute;
     margin: 0;
     padding: 0;
-    width: calc($width/2);
-    clip: rect(0 0 0 0);
+    width: calc($width/2 - 5px);
+    height: $height;
     opacity: 0;
+    z-index: 4;
     border-radius: 10px;
+    top: 0;
 }
 
-.tumbler__input:focus~.tumbler__anim {
-    background-color: aqua;
+.tumbler__input:first-of-type {
+    left: 0;
 }
 
+.tumbler__input:last-of-type {
+    right: 0;
+}
+
+.tumbler__input:first-of-type:checked~.tumbler__anim {
+    $position: 0;
+    left: 0;
+    animation: .5s 1 alternate to-left;
+    animation-fill-mode: forwards;
+}
+
+.tumbler__input:last-of-type:checked~.tumbler__anim {
+    $position: calc($width - 60%);
+    left: calc($width - 60%);
+    animation: .5s 1 alternate to-right;
+    animation-fill-mode: forwards;
+}
+
+@keyframes to-left {
+
+    0% {
+        border-radius: 80% 100% 100% 80%;
+        width: 80%;
+        left: calc(130px - 60%);
+
+    }
+
+    100% {
+        width: 50%;
+        border-radius: 10px;
+        left: 0;
+    }
+
+}
+
+@keyframes to-right {
+
+    0% {
+        border-radius: 100% 80% 80% 100%;
+        width: 80%;
+        left: 0;
+
+    }
+
+    100% {
+        width: 50%;
+        border-radius: 10px;
+        left: calc(130px - 50%);
+    }
+
+}
