--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,23 @@
 $color_off: rgba(244, 244, 244, 1);
 $color_on: rgba(51, 121, 217, 1);
-$width: 130px;
-$height: 30px;
-$position: 0;
 
+// $color_off: #ede3e9;
+// $color_on: #9f84bd;
+$text-color: black;
+// $shadow-color1: #FFE200;
+// $shadow-color2: #F2FD3F;
+
+
+$width: 130px;
+$border-rad: 10px;
+$height: 30px;
+$font-size: calc($width/9);
+$anim_dur: 1s;
+$gap: 5px;
+$arrow-size: 12px;
 
 .tumbler {
+
     display: flex;
     justify-content: space-between;
     height: $height;
@@ -16,69 +28,116 @@ $position: 0;
     overflow: hidden;
 }
 
-.tumbpler__paragraph {
-    font-weight: 200;
-    font-size: 15px;
-    z-index: 3;
-    position: relative;
-    margin: 0;
-}
-
 .tumbler__side {
-    position: relative;
-    width: 65px;
+
+    --left-arrow: url("./media/arrow-dark.svg");
+    --right-arrow: url("./media/arrow-light.svg");
+
+    width: calc($width*0.45);
     height: $height;
-    border-radius: 10px;
+    border-radius: $border-rad;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    position: relative;
+    gap: $gap;
+}
+
+.tumbpler__paragraph {
+    color: $text-color;
+    font-weight: 200;
+    font-size: $font-size;
+    margin: 0;
+    margin-bottom: calc($font-size/5);
+
+    @if $width < 70px {
+        display: none;
+    }
+}
+
+.tumbler__arrow {
+    position: relative;
+    width: $arrow-size;
+    height: $arrow-size;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all .5s;
+    transition: all $anim_dur ease .1s;
+
+    @if $width < 110px {
+        display: none;
+    }
+
+    @if $width < 70px {
+        display: flex;
+    }
+
+}
+
+.tumbler__arrow_direction_left {
+    background-image: var(--left-arrow);
+    transform: rotate(180deg);
+}
+
+.tumbler__arrow_direction_right {
+    background-image: var(--right-arrow);
 }
 
 .tumbler__anim {
-    width: 50%;
-    height: 30px;
+    width: calc($width*0.4);
+    height: $height;
     background-color: $color_on;
-    border-radius: 10px;
+    border-radius: $border-rad;
     position: absolute;
     top: 0;
-    left: $position;
-    z-index: 1;
+    left: 0;
 }
-
 
 .tumbler__input {
     position: absolute;
     margin: 0;
     padding: 0;
-    width: calc($width/2 - 5px);
+    width: calc($width/2);
     height: $height;
     opacity: 0;
     z-index: 4;
-    border-radius: 10px;
+    border-radius: $border-rad;
     top: 0;
 }
 
 .tumbler__input:first-of-type {
+    width: calc($width*0.45);
     left: 0;
 }
 
 .tumbler__input:last-of-type {
+    width: calc($width*0.55);
     right: 0;
 }
 
+
+.tumbler__input:first-of-type:checked~.tumbler__side {
+    --left-arrow: url("./media/arrow-light.svg")
+}
+
+.tumbler__input:first-of-type:checked~.tumbler__side {
+    --right-arrow: url("./media/arrow-dark.svg")
+}
+
 .tumbler__input:first-of-type:checked~.tumbler__anim {
-    $position: 0;
     left: 0;
-    animation: .5s 1 alternate to-left;
+    animation: $anim_dur 1 alternate to-left;
     animation-fill-mode: forwards;
+    --left-arrow: url("./media/arrow-dark.svg");
 }
 
 .tumbler__input:last-of-type:checked~.tumbler__anim {
-    $position: calc($width - 60%);
     left: calc($width - 60%);
-    animation: .5s 1 alternate to-right;
+    animation: $anim_dur 1 alternate to-right;
     animation-fill-mode: forwards;
+    --right-arrow: url("./media/arrow-light.svg");
 }
 
 @keyframes to-left {
@@ -86,14 +145,15 @@ $position: 0;
     0% {
         border-radius: 80% 100% 100% 80%;
         width: 80%;
-        left: calc(130px - 60%);
+        left: calc($width - 60%);
 
     }
 
     100% {
-        width: 50%;
+        width: calc($width*0.45);
         border-radius: 10px;
         left: 0;
+
     }
 
 }
@@ -108,9 +168,10 @@ $position: 0;
     }
 
     100% {
-        width: 50%;
+        width: calc($width*0.55);
         border-radius: 10px;
-        left: calc(130px - 50%);
+        left: calc($width - 55%);
+
     }
 
 }
