--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,37 +1,46 @@
-$color_off: rgba(244, 244, 244, 1);
-$color_on: rgba(51, 121, 217, 1);
-
 // $color_off: #ede3e9;
 // $color_on: #9f84bd;
-$text-color: black;
+
 // $shadow-color1: #FFE200;
 // $shadow-color2: #F2FD3F;
 
+$color_on: rgba(51, 121, 217, 1);
+$text-color: black;
+$color_off: rgba(244, 244, 244, 1);
 
 $width: 130px;
 $border-rad: 10px;
 $height: 30px;
 $font-size: calc($width/9);
-$anim_dur: 1s;
+$anim_dur: .2s;
 $gap: 5px;
 $arrow-size: 12px;
 
-.tumbler {
+body {
+    display: flex;
+    gap: 30px;
+}
 
+.tumbler {
+    background-color: $color_off;
     display: flex;
     justify-content: space-between;
     height: $height;
     width: $width;
-    background-color: $color_off;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+    transition: opacity .2s linear;
+}
+
+.tumbler:hover {
+    opacity: .9;
 }
 
 .tumbler__side {
 
-    --left-arrow: url("./media/arrow-dark.svg");
-    --right-arrow: url("./media/arrow-light.svg");
+    --left-arrow: url("../media/arrow-dark.svg");
+    --right-arrow: url("../media/arrow-light.svg");
 
     width: calc($width*0.45);
     height: $height;
@@ -63,8 +72,7 @@ $arrow-size: 12px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    transition: all .5s;
-    transition: all $anim_dur ease .1s;
+    transition: backgroung-image $anim_dur ease .1s;
 
     @if $width < 110px {
         display: none;
@@ -119,25 +127,28 @@ $arrow-size: 12px;
 
 
 .tumbler__input:first-of-type:checked~.tumbler__side {
-    --left-arrow: url("./media/arrow-light.svg")
+    --left-arrow: url("../media/arrow-light.svg")
 }
 
 .tumbler__input:first-of-type:checked~.tumbler__side {
-    --right-arrow: url("./media/arrow-dark.svg")
+    --right-arrow: url("../media/arrow-dark.svg")
 }
+
 
 .tumbler__input:first-of-type:checked~.tumbler__anim {
     left: 0;
     animation: $anim_dur 1 alternate to-left;
     animation-fill-mode: forwards;
-    --left-arrow: url("./media/arrow-dark.svg");
+    animation-timing-function: ease;
+    --left-arrow: url("../media/arrow-dark.svg");
 }
 
 .tumbler__input:last-of-type:checked~.tumbler__anim {
     left: calc($width - 60%);
     animation: $anim_dur 1 alternate to-right;
     animation-fill-mode: forwards;
-    --right-arrow: url("./media/arrow-light.svg");
+    animation-timing-function: ease;
+    --right-arrow: url("../media/arrow-light.svg");
 }
 
 @keyframes to-left {
@@ -146,14 +157,12 @@ $arrow-size: 12px;
         border-radius: 80% 100% 100% 80%;
         width: 80%;
         left: calc($width - 60%);
-
     }
 
     100% {
         width: calc($width*0.45);
         border-radius: 10px;
         left: 0;
-
     }
 
 }
@@ -164,14 +173,12 @@ $arrow-size: 12px;
         border-radius: 100% 80% 80% 100%;
         width: 80%;
         left: 0;
-
     }
 
     100% {
         width: calc($width*0.55);
         border-radius: 10px;
         left: calc($width - 55%);
-
     }
 
 }
