--- a/styles/neon/neon.css
+++ b/styles/neon/neon.css
@@ -10,23 +10,35 @@
   color: #edf6f9;
 }
 
+.tumbler__input:first-of-type:checked ~ .tumbler__side_type_neon {
+  --left-arrow: #ffffff;
+  --right-arrow: #9b5de5;
+  --left-p: #ffffff;
+  --right-p: #9b5de5;
+}
+
+.tumbler__input:last-of-type:checked ~ .tumbler__side_type_neon {
+  --right-arrow: #ffffff;
+  --left-arrow: #9b5de5;
+  --left-p: #9b5de5;
+  --right-p: #ffffff;
+}
+
 .tumbler__input:first-of-type:checked ~ .tumbler__anim_type_neon {
   left: 0;
-  animation: 0.2s 1 alternate to-left;
+  animation: 0.2s 1 alternate to-left-neon;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
-  --left-arrow: url("../media/arrow-dark.svg");
 }
 
 .tumbler__input:last-of-type:checked ~ .tumbler__anim_type_neon {
   left: calc(130px - 60%);
-  animation: 0.2s 1 alternate to-right;
+  animation: 0.2s 1 alternate to-right-neon;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
-  --right-arrow: url("../media/arrow-light.svg");
 }
 
-@keyframes to-left {
+@keyframes to-left-neon {
   0% {
     border-radius: 80% 100% 100% 80%;
     box-shadow: 30px 0 10px #9b5de5, 40px 0 10px #00bbf9, 65px 0 10px #fee440;
@@ -42,7 +54,7 @@
     left: 0;
   }
 }
-@keyframes to-right {
+@keyframes to-right-neon {
   0% {
     border-radius: 100% 80% 80% 100%;
     box-shadow: -30px 0 10px #9b5de5, -40px 0 10px #00bbf9, -65px 0 10px #fee440;
