--- a/styles/neon/neon.scss
+++ b/styles/neon/neon.scss
@@ -2,6 +2,8 @@ $color_on: #9b5de5;
 $text-color: #edf6f9;
 $color_off: #118ab2;
 $color_off: #10002b;
+$arrow-color-on: #ffffff;
+$arrow-color-off: #9b5de5;
 
 // $shadow-color1: #ef476f;
 // $shadow-color2: #ffd166;
@@ -26,23 +28,37 @@ $width: 130px;
     color: $text-color;
 }
 
+.tumbler__input:first-of-type:checked~.tumbler__side_type_neon {
+    --left-arrow: #{$arrow-color-on};
+    --right-arrow: #{$arrow-color-off};
+
+    --left-p: #{$arrow-color-on};
+    --right-p: #{$arrow-color-off};
+}
+
+.tumbler__input:last-of-type:checked~.tumbler__side_type_neon {
+    --right-arrow: #{$arrow-color-on};
+    --left-arrow: #{$arrow-color-off};
+
+    --left-p: #{$arrow-color-off};
+    --right-p: #{$arrow-color-on};
+}
+
 .tumbler__input:first-of-type:checked~.tumbler__anim_type_neon {
     left: 0;
-    animation: $anim_dur 1 alternate to-left;
+    animation: $anim_dur 1 alternate to-left-neon;
     animation-fill-mode: forwards;
     animation-timing-function: ease;
-    --left-arrow: url("../media/arrow-dark.svg");
 }
 
 .tumbler__input:last-of-type:checked~.tumbler__anim_type_neon {
     left: calc($width - 60%);
-    animation: $anim_dur 1 alternate to-right;
+    animation: $anim_dur 1 alternate to-right-neon;
     animation-fill-mode: forwards;
     animation-timing-function: ease;
-    --right-arrow: url("../media/arrow-light.svg");
 }
 
-@keyframes to-left {
+@keyframes to-left-neon {
 
     0% {
         border-radius: 80% 100% 100% 80%;
@@ -63,7 +79,7 @@ $width: 130px;
 
 }
 
-@keyframes to-right {
+@keyframes to-right-neon {
 
     0% {
         border-radius: 100% 80% 80% 100%;
