--- a/styles/style.css
+++ b/styles/style.css
@@ -8,21 +8,22 @@ body {
   display: flex;
   justify-content: space-between;
   height: 30px;
-  width: 130px;
+  width: 40px;
   border-radius: 10px;
   position: relative;
   overflow: hidden;
   transition: opacity 0.2s linear;
 }
-
 .tumbler:hover {
   opacity: 0.9;
 }
 
 .tumbler__side {
-  --left-arrow: url("../media/arrow-dark.svg");
-  --right-arrow: url("../media/arrow-light.svg");
-  width: 58.5px;
+  --left-arrow: #FFFFFF;
+  --right-arrow: #222222;
+  --left-p: #FFFFFF;
+  --right-p: #222222;
+  width: 20px;
   height: 30px;
   border-radius: 10px;
   display: flex;
@@ -33,35 +34,51 @@ body {
   gap: 5px;
 }
 
-.tumbpler__paragraph {
+.tumbler__paragraph {
   color: black;
   font-weight: 200;
-  font-size: 14.4444444444px;
+  font-size: 4.4444444444px;
   margin: 0;
-  margin-bottom: 2.8888888889px;
+  margin-bottom: 0.8888888889px;
+  display: none;
+}
+
+.tumbler__paragraph_left {
+  color: var(--left-p);
+}
+
+.tumbler__paragraph_right {
+  color: var(--right-p);
 }
 
 .tumbler__arrow {
   position: relative;
   width: 12px;
   height: 12px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: backgroung-image 0.2s ease 0.1s;
+  mask-image: url("../media/arrow-dark.svg");
+  mask-size: 100%;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-image: url("../media/arrow-dark.svg");
+  -webkit-mask-size: 100%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  background-color: #222222;
+  display: none;
+  display: flex;
 }
 
 .tumbler__arrow_direction_left {
-  background-image: var(--left-arrow);
+  background-color: var(--left-arrow);
   transform: rotate(180deg);
 }
 
 .tumbler__arrow_direction_right {
-  background-image: var(--right-arrow);
+  background-color: var(--right-arrow);
 }
 
 .tumbler__anim {
-  width: 52px;
+  width: 16px;
   height: 30px;
   background-color: rgb(51, 121, 217);
   border-radius: 10px;
@@ -74,56 +91,54 @@ body {
   position: absolute;
   margin: 0;
   padding: 0;
-  width: 65px;
+  width: 20px;
   height: 30px;
   opacity: 0;
   z-index: 4;
   border-radius: 10px;
   top: 0;
 }
-
 .tumbler__input:first-of-type {
-  width: 58.5px;
+  width: 18px;
   left: 0;
 }
-
-.tumbler__input:last-of-type {
-  width: 71.5px;
-  right: 0;
-}
-
-.tumbler__input:first-of-type:checked ~ .tumbler__side {
-  --left-arrow: url("../media/arrow-light.svg") ;
-}
-
-.tumbler__input:first-of-type:checked ~ .tumbler__side {
-  --right-arrow: url("../media/arrow-dark.svg") ;
-}
-
 .tumbler__input:first-of-type:checked ~ .tumbler__anim {
   left: 0;
   animation: 0.2s 1 alternate to-left;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
-  --left-arrow: url("../media/arrow-dark.svg");
 }
-
+.tumbler__input:first-of-type:checked ~ .tumbler__side {
+  --left-arrow: #FFFFFF;
+  --right-arrow: #222222;
+  --left-p: #FFFFFF;
+  --right-p: #222222;
+}
+.tumbler__input:last-of-type {
+  width: 22px;
+  right: 0;
+}
 .tumbler__input:last-of-type:checked ~ .tumbler__anim {
-  left: calc(130px - 60%);
+  left: calc(40px - 60%);
   animation: 0.2s 1 alternate to-right;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
-  --right-arrow: url("../media/arrow-light.svg");
+}
+.tumbler__input:last-of-type:checked ~ .tumbler__side {
+  --right-arrow: #FFFFFF;
+  --left-arrow: #222222;
+  --left-p: #222222;
+  --right-p: #FFFFFF;
 }
 
 @keyframes to-left {
   0% {
     border-radius: 80% 100% 100% 80%;
     width: 80%;
-    left: calc(130px - 60%);
+    left: calc(40px - 60%);
   }
   100% {
-    width: 58.5px;
+    width: 18px;
     border-radius: 10px;
     left: 0;
   }
@@ -135,9 +150,9 @@ body {
     left: 0;
   }
   100% {
-    width: 71.5px;
+    width: 22px;
     border-radius: 10px;
-    left: calc(130px - 55%);
+    left: calc(40px - 55%);
   }
 }
 
