--- a/styles/neon/neon.css
+++ b/styles/neon/neon.css
@@ -1,37 +1,49 @@
 .tumbler_type_neon {
-  background-color: #10002b;
+  background-color: #d8f3dc;
+  width: 130px;
+}
+
+.tumbler__side_type_neon .tumbler__paragraph {
+  font-size: 14.4444444444px;
+  display: flex;
+}
+.tumbler__side_type_neon .tumbler__arrow {
+  display: flex;
 }
 
 .tumbler__anim_type_neon {
-  background-color: #9b5de5;
+  background-color: #40916c;
 }
 
 .tumbpler__paragraph_type_neon {
   color: #edf6f9;
 }
 
-.tumbler__input:first-of-type:checked ~ .tumbler__side_type_neon {
-  --left-arrow: #ffffff;
-  --right-arrow: #9b5de5;
-  --left-p: #ffffff;
-  --right-p: #9b5de5;
+.tumbler__input_type_neon:first-of-type {
+  width: 58.5px;
 }
-
-.tumbler__input:last-of-type:checked ~ .tumbler__side_type_neon {
-  --right-arrow: #ffffff;
-  --left-arrow: #9b5de5;
-  --left-p: #9b5de5;
-  --right-p: #ffffff;
+.tumbler__input_type_neon:first-of-type:checked ~ .tumbler__side_type_neon {
+  --left-arrow: #d8f3dc;
+  --right-arrow: #40916c;
+  --left-p: #d8f3dc;
+  --right-p: #40916c;
 }
-
-.tumbler__input:first-of-type:checked ~ .tumbler__anim_type_neon {
+.tumbler__input_type_neon:first-of-type:checked ~ .tumbler__anim_type_neon {
   left: 0;
   animation: 0.2s 1 alternate to-left-neon;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
 }
-
-.tumbler__input:last-of-type:checked ~ .tumbler__anim_type_neon {
+.tumbler__input_type_neon:last-of-type {
+  width: 71.5px;
+}
+.tumbler__input_type_neon:last-of-type:checked ~ .tumbler__side_type_neon {
+  --right-arrow: #d8f3dc;
+  --left-arrow: #40916c;
+  --left-p: #40916c;
+  --right-p: #d8f3dc;
+}
+.tumbler__input_type_neon:last-of-type:checked ~ .tumbler__anim_type_neon {
   left: calc(130px - 60%);
   animation: 0.2s 1 alternate to-right-neon;
   animation-fill-mode: forwards;
@@ -41,12 +53,12 @@
 @keyframes to-left-neon {
   0% {
     border-radius: 80% 100% 100% 80%;
-    box-shadow: 30px 0 10px #9b5de5, 40px 0 10px #00bbf9, 65px 0 10px #fee440;
+    box-shadow: 26px 0 10px #40916c, 32.5px 0 10px #f28482, 65px 0 10px #f6bd60;
     width: 80%;
     left: calc(130px - 60%);
   }
   50% {
-    box-shadow: 30px 0 10px #9b5de5, 40px 0 10px #00bbf9, 65px 0 10px #fee440;
+    box-shadow: 26px 0 10px #40916c, 32.5px 0 10px #f28482, 65px 0 10px #f6bd60;
   }
   100% {
     width: 58.5px;
@@ -57,12 +69,12 @@
 @keyframes to-right-neon {
   0% {
     border-radius: 100% 80% 80% 100%;
-    box-shadow: -30px 0 10px #9b5de5, -40px 0 10px #00bbf9, -65px 0 10px #fee440;
+    box-shadow: -26px 0 10px #40916c, -32.5px 0 10px #f28482, -65px 0 10px #f6bd60;
     width: 80%;
     left: 0;
   }
   50% {
-    box-shadow: -30px 0 10px #9b5de5, -40px 0 10px #00bbf9, -65px 0 10px #fee440;
+    box-shadow: -26px 0 10px #40916c, -32.5px 0 10px #f28482, -65px 0 10px #f6bd60;
   }
   100% {
     width: 71.5px;
