--- a/styles/scaled/scaled.scss
+++ b/styles/scaled/scaled.scss
@@ -1,51 +1,102 @@
-$anim_dur: .2s;
-$width: 130px;
-
+// Основные цвета | Main colors
 $color_on: #748cab;
-$text-color: #0d1321;
 $color_off: #e1e5f2;
+
+// Дополнительные цвета | Additional colors
+$text-color: #0d1321;
 $light-color: #f2d492;
 $arrow-color-on: #ffffff;
 $arrow-color-off: #555b6e;
 
+// Размеры | Sizes
+$anim_dur: .2s;
+$width: 100px;
+$font-size: calc($width/9);
+
+// Стили | Styles
 .tumbler_type_scaled {
     background-color: $color_off;
+    width: $width;
 }
 
-.tumbler__anim_type_scale {
+.tumbler__side_type_scaled {
+    .tumbler__paragraph {
+        font-size: $font-size;
+
+        @if $width < 70px {
+            display: none;
+        }
+
+        @else {
+            display: flex;
+        }
+    }
+
+    .tumbler__arrow {
+        @if $width < 110px {
+            display: none;
+        }
+
+        @else {
+            display: flex;
+        }
+
+        @if $width < 70px {
+            display: flex;
+        }
+    }
+}
+
+.tumbler__input_type_scaled {
+    &:first-of-type {
+        width: calc($width*0.45);
+
+        &:checked {
+            ~.tumbler__side_type_scaled {
+                --left-arrow: #{$arrow-color-on};
+                --right-arrow: #{$arrow-color-off};
+
+                --left-p: #{$arrow-color-on};
+                --right-p: #{$arrow-color-off};
+            }
+
+            ~.tumbler__anim_type_scaled {
+                animation: $anim_dur 1 alternate to-left-scaled;
+                animation-fill-mode: forwards;
+                animation-timing-function: ease;
+            }
+        }
+    }
+
+    &:last-of-type {
+        width: calc($width*0.55);
+
+        &:checked {
+            ~.tumbler__side_type_scaled {
+                --right-arrow: #{$arrow-color-on};
+                --left-arrow: #{$arrow-color-off};
+
+                --left-p: #{$arrow-color-off};
+                --right-p: #{$arrow-color-on};
+            }
+
+            ~.tumbler__anim_type_scaled {
+                animation: $anim_dur 1 alternate to-right-scaled;
+                animation-fill-mode: forwards;
+                animation-timing-function: ease;
+                background-color: $light-color;
+            }
+        }
+    }
+
+}
+
+.tumbler__anim_type_scaled {
     background-color: $color_on;
 }
 
-.tumbler__input:first-of-type:checked~.tumbler__side_type_scaled {
-    --left-arrow: #{$arrow-color-on};
-    --right-arrow: #{$arrow-color-off};
 
-    --left-p: #{$arrow-color-on};
-    --right-p: #{$arrow-color-off};
-}
-
-.tumbler__input:last-of-type:checked~.tumbler__side_type_scaled {
-    --right-arrow: #{$arrow-color-on};
-    --left-arrow: #{$arrow-color-off};
-
-    --left-p: #{$arrow-color-off};
-    --right-p: #{$arrow-color-on};
-}
-
-.tumbler__input:first-of-type:checked~.tumbler__anim_type_scale {
-    animation: $anim_dur 1 alternate to-left-scaled;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease;
-}
-
-
-.tumbler__input:last-of-type:checked~.tumbler__anim_type_scale {
-    animation: $anim_dur 1 alternate to-right-scaled;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease;
-    background-color: $light-color;
-}
-
+// Анимации | Animations
 @keyframes to-left-scaled {
 
     0% {
@@ -55,14 +106,13 @@ $arrow-color-off: #555b6e;
     }
 
     50% {
-        width: calc($width*2);
+        width: $width;
     }
 
     100% {
         width: calc($width*0.45);
         border-radius: 10px;
         left: 0;
-        transform: scale(1);
     }
 
 }
@@ -76,7 +126,7 @@ $arrow-color-off: #555b6e;
     }
 
     50% {
-        width: calc($width*2);
+        width: $width;
     }
 
     100% {
