--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,47 @@
 body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
   display: flex;
-  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 700px;
+  max-width: 700px;
+  height: max-content;
+  background-color: #f8f9fa;
+  display: grid;
+  justify-content: space-between;
+  grid-template-rows: max-content;
+  row-gap: 30px;
+  column-gap: 70px;
+  padding: 30px 50px;
+}
+
+.container__tumblers {
+  grid-area: 2/2;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+  margin-right: 70px;
+}
+
+.container__text {
+  margin: 0;
+  grid-area: 2/1;
+  color: #6c757d;
+  line-height: 23px;
+}
+
+.container__heading {
+  margin: 0;
+  grid-row: 1;
+  grid-column: 1/3;
+  font-size: 40px;
+  color: #495057;
 }
 
 .tumbler {
@@ -8,7 +49,7 @@ body {
   display: flex;
   justify-content: space-between;
   height: 30px;
-  width: 40px;
+  width: 60px;
   border-radius: 10px;
   position: relative;
   overflow: hidden;
@@ -23,7 +64,6 @@ body {
   --right-arrow: #222222;
   --left-p: #FFFFFF;
   --right-p: #222222;
-  width: 20px;
   height: 30px;
   border-radius: 10px;
   display: flex;
@@ -31,15 +71,18 @@ body {
   justify-content: center;
   overflow: hidden;
   position: relative;
-  gap: 5px;
+  width: 45%;
+}
+.tumbler__side:last-of-type {
+  width: 55%;
 }
 
 .tumbler__paragraph {
   color: black;
   font-weight: 200;
-  font-size: 4.4444444444px;
-  margin: 0;
-  margin-bottom: 0.8888888889px;
+  font-size: 6.6666666667px;
+  margin: 0 5px;
+  margin-bottom: 1.3333333333px;
   display: none;
 }
 
@@ -78,7 +121,7 @@ body {
 }
 
 .tumbler__anim {
-  width: 16px;
+  width: 24px;
   height: 30px;
   background-color: rgb(51, 121, 217);
   border-radius: 10px;
@@ -91,7 +134,7 @@ body {
   position: absolute;
   margin: 0;
   padding: 0;
-  width: 20px;
+  width: 30px;
   height: 30px;
   opacity: 0;
   z-index: 4;
@@ -99,7 +142,7 @@ body {
   top: 0;
 }
 .tumbler__input:first-of-type {
-  width: 18px;
+  width: 27px;
   left: 0;
 }
 .tumbler__input:first-of-type:checked ~ .tumbler__anim {
@@ -115,11 +158,11 @@ body {
   --right-p: #222222;
 }
 .tumbler__input:last-of-type {
-  width: 22px;
+  width: 33px;
   right: 0;
 }
 .tumbler__input:last-of-type:checked ~ .tumbler__anim {
-  left: calc(40px - 60%);
+  left: calc(60px - 60%);
   animation: 0.2s 1 alternate to-right;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
@@ -135,10 +178,10 @@ body {
   0% {
     border-radius: 80% 100% 100% 80%;
     width: 80%;
-    left: calc(40px - 60%);
+    left: calc(60px - 60%);
   }
   100% {
-    width: 18px;
+    width: 27px;
     border-radius: 10px;
     left: 0;
   }
@@ -150,9 +193,9 @@ body {
     left: 0;
   }
   100% {
-    width: 22px;
+    width: 33px;
     border-radius: 10px;
-    left: calc(40px - 55%);
+    left: calc(60px - 55%);
   }
 }
 
