--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,24 +1,72 @@
-// Переменные, задающие основные параметры кнопки 
+// Основные цвета | Main colors
 $color_on: rgba(51, 121, 217, 1);
-$text-color: black;
 $color_off: rgba(244, 244, 244, 1);
+
+// Дополнительные цвета | Additional colors
+$text-color: black;
 $arrow-color-on: #FFFFFF;
 $arrow-color-off: #222222;
 
-$width: 40px;
+// Размеры | Sizes
+$width: 60px;
 $border-rad: 10px;
 $height: 30px;
 $font-size: calc($width/9);
 $anim_dur: .2s;
-$gap: 5px;
 $arrow-size: 12px;
 
+
+// Стили | Styles
+
+// Стили окружения | Surrounding styles
 body {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
     display: flex;
-    gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
-// Стилизация основных элементов
+.container {
+    width: 700px;
+    max-width: 700px;
+    height: max-content;
+    background-color: #f8f9fa;
+    display: grid;
+    justify-content: space-between;
+    grid-template-rows: max-content;
+    row-gap: 30px;
+    column-gap: 70px;
+    padding: 30px 50px;
+}
+
+.container__tumblers {
+    grid-area: 2/2;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+    margin-right: 70px;
+}
+
+.container__text {
+    margin: 0;
+    grid-area: 2/1;
+    color: #6c757d;
+    line-height: 23px;
+}
+
+.container__heading {
+    margin: 0;
+    grid-row: 1;
+    grid-column: 1 / 3;
+    font-size: 40px;
+    color: #495057;
+}
+
+// Стили кнопки | Button styles
+
 .tumbler {
     background-color: $color_off;
     display: flex;
@@ -42,7 +90,6 @@ body {
     --left-p: #{$arrow-color-on};
     --right-p: #{$arrow-color-off};
 
-    width: calc($width*0.5);
     height: $height;
     border-radius: $border-rad;
     display: flex;
@@ -50,14 +97,18 @@ body {
     justify-content: center;
     overflow: hidden;
     position: relative;
-    gap: $gap;
+    width: 45%;
+
+    &:last-of-type {
+        width: 55%;
+    }
 }
 
 .tumbler__paragraph {
     color: $text-color;
     font-weight: 200;
     font-size: $font-size;
-    margin: 0;
+    margin: 0 5px;
     margin-bottom: calc($font-size/5);
 
     @if $width < 70px {
@@ -78,7 +129,8 @@ body {
     width: $arrow-size;
     height: $arrow-size;
 
-    // Стрелки вставляю в качестве маски, чтобы была возможность легко менять их цвет с помощью css, не вставляя svg инлайново в html
+    // Стрелки вставляю в качестве маски, чтобы была возможность легко менять их цвет с помощью css, не вставляя svg инлайново в html.
+    // I add arrows as a mask so I can easily change their colors with css not adding svg directly into html.
     mask-image: url("../media/arrow-dark.svg");
     mask-size: 100%;
     mask-repeat: no-repeat;
@@ -107,9 +159,6 @@ body {
 .tumbler__arrow_direction_right {
     background-color: var(--right-arrow);
 }
-
-
-// Стилизация и функциональность анимации
 
 .tumbler__anim {
     width: calc($width*0.4);
@@ -180,6 +229,8 @@ body {
     }
 }
 
+
+// Анимации | Animations
 @keyframes to-left {
 
     0% {
